--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -69,8 +69,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #00b9c1,
-  secondary: #f5928b,
+  primary: #A62E3C,
+  secondary: #A62E3C,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
