--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -70,7 +70,7 @@ $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #A62E3C,
-  secondary: #A62E3C,
+  secondary: #FFD380,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
