--- a/scss/custom/_footer.scss
+++ b/scss/custom/_footer.scss
@@ -6,14 +6,14 @@
     background: url(/images/sparkles.gif);
     background-position: top;
     background-repeat: repeat;
-    background-color: #f5928b;
+    background-color: $secondary-color;
     color: #fff;
     padding-top: 40px;
     padding-bottom: 60px;
     h6 {
         text-transform: uppercase;
         font-weight: 700;
-        color: #ffcf00;
+        color: $primary-color;
     }
     p {
         margin-bottom: 0;
