--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -60,8 +60,8 @@ h2 {
     -webkit-perspective: 1000;
     padding: 120px 0px 190px 0;
     color: #fff;
-    .yellow {
-        color: #ffcf00;
+    .title {
+        color: $primary-color;
     }
 }
 
