--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -106,8 +106,115 @@ h2 {
     }
 }
 
-#contato{
-    h6{
-        color: $secondary-color;
+#container {
+  border: solid 3px #474544;
+  max-width: 768px;
+  margin: 60px auto;
+  position: relative;
+  
+}
+
+.form {
+  padding: 37.5px;
+  margin: 50px 0;
+}
+
+h1 {
+  color: #474544;
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: 7px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.underline {
+  border-bottom: solid 2px #474544;
+  margin: -0.512em auto;
+  width: 80px;
+}
+
+.icon_wrapper {
+  margin: 50px auto 0;
+  width: 100%;
+}
+
+.icon {
+  display: block;
+  fill: #474544;
+  height: 50px;
+  margin: 0 auto;
+  width: 50px;
+}
+
+.emails {
+	float: right;
+    width: 45%;
+    p{
+        color: $warning-color;
     }
+}
+
+
+  
+.telefone{
+    p{
+        color: $warning-color;
+    }
+}
+
+
+h5 {
+	background: none;
+  border: none;
+	border-bottom: solid 2px #474544;
+	color: #474544;
+
+
+}
+
+.name {
+	float: left;
+    width: 45%;
+    p{
+        color: $warning-color;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+  #container {
+    margin: 20px auto;
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 26px;
+  }
+  
+  .underline {
+    width: 68px;
+  }
+  
+  #form_button {
+    padding: 15px 25px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  h1 {
+    font-size: 18px;
+  }
+  
+  .icon {
+    height: 35px;
+    width: 35px;
+  }
+  
+  .underline {
+    width: 53px;
+  }
+
 }
