--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -70,11 +70,12 @@ $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #A62E3C,
-  secondary: #FCC45E,
+  secondary: #ffae00,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
 );
+$third-color: #6d9e82;
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
