--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -40,7 +40,7 @@ h2 {
     background: url(/images/sparkles-white.png);
     h1{
         margin-bottom: 10rem;
-        color: $success-color;
+        color: $secondary-color;
         text-align: center;
     text-transform: uppercase;
     }
@@ -112,110 +112,26 @@ h2 {
     }
 }
 
-#container {
-    border: solid 3px #474544;
-    max-width: 768px;
-    margin: 60px auto;
-    position: relative;
-    
-}
-
-.form {
-    padding: 37.5px;
-    margin: 50px 0;
-}
-
-
-.underline {
-    border-bottom: solid 2px #474544;
-    margin: -0.512em auto;
-    width: 80px;
-}
-
-.icon_wrapper {
-    margin: 50px auto 0;
-    width: 100%;
-}
-
-.icon {
-    display: block;
-    fill: #474544;
-    height: 50px;
-    margin: 0 auto;
-    width: 50px;
-}
-
-.emails {
-	float: left;
-    width: 45%;
-    p{
-        color: $warning-color;
-    }
-}
-
-
 .mapa {
-	float: right;
-    width: 45%;
+   float: right;
+    width: 50%;
+    position: relative;
+    bottom: 500px;
+    left: 100px;
+  
    
+
 }
 
-h5 {
-	
-	color: $success-color;
-    
-    
-}
+.linha-vertical {
+    height: 600px;/*Altura da linha*/
+    border-left: 3px solid;/* Adiciona borda esquerda na div como ser fosse uma linha.*/
+    margin-left: 550px;
+    color: $secondary-color;
+  }
 
-.name {
-	float: left;
-    width: 45%;
-    p{
-        color: $warning-color;
-    }
-}
-
-.telefone {
-	
-    p{
-        color: $warning-color;
-    }
-}
-
-
-@media screen and (max-width: 768px) {
-    #container {
-        margin: 20px auto;
-        width: 95%;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    h1 {
-        font-size: 26px;
-    }
-    
-    .underline {
-        width: 68px;
-    }
-    
-    #form_button {
-        padding: 15px 25px;
-    }
-}
-
-@media screen and (max-width: 420px) {
-    h1 {
-        font-size: 18px;
-    }
-    
-    .icon {
-        height: 35px;
-        width: 35px;
-    }
-    
-    .underline {
-        width: 53px;
-    }
-    
+.contato-info{
+    position: relative;
+    bottom: 450px;
+    font-weight: bolder;
 }
