--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5326,10 +5326,6 @@ h2 {
 .top-cell-padding {
   padding-top: 140px; }
 
-@media screen and (max-width: 39.9375em) {
-  .quote {
-    top: 0; } }
-
 .img-header {
   width: 100%;
   height: 100%; }
@@ -5354,3 +5350,9 @@ h2 {
 .table td,
 .table th {
   vertical-align: top; }
+
+@media screen and (max-width: 39.9375em) {
+  .quote {
+    top: 0; }
+  .footer {
+    padding-bottom: 20px; } }
