--- a/scss/custom/_responsive.scss
+++ b/scss/custom/_responsive.scss
@@ -1,10 +1,16 @@
-
 @include breakpoint(small only) {
     .quote {
         top: 0;
+        padding-bottom: 20px;
     }
-
     .footer {
         padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .responsive-bottom-space {
+        padding-bottom: 20px;
+    }
+    .footer .info {
+        padding-top: 0px;
     }
 }
