--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -75,7 +75,7 @@ h2 {
 }
 
 .stripe {
-    padding: 0px 0px 90px 0;
+    padding: 60px 0px 90px 0;
 }
 
 .pink-content {
@@ -84,6 +84,10 @@ h2 {
 
 .pink-gradient-content {
     background: url(/images/sparkles.gif), url(/images/bg-top-v2.png);
+}
+
+.no-bottom-padding {
+    padding: 90px 0px 120px 0;
 }
 
 .quote {
