--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -2,12 +2,13 @@ $topbar-sticky-shrink-padding: 0rem;
 $topbar-sticky-shrink-bg: #fff;
 $topbar-sticky-stuck-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
 $topbar-sticky-font-size: 0.8em;
+$topbar-header-size: 4.25em;
 nav {
     width: 100%;
     position: fixed;
     left: 0px;
     top: -4.25em;
-    height: 4.25em;
+    height: $topbar-header-size;
     background-color: #fff;
     z-index: 99;
     text-align: center;
@@ -28,6 +29,10 @@ nav {
         -webkit-margin-end: 0px;
         font-weight: bold;
     }
+}
+
+.no-top {
+    top:0px;
 }
 
 #header {
