Adapting for responsive

--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -53,6 +53,10 @@ nav {
     overflow: hidden
 }
 
+.image-header {
+    display: none;
+}
+
 .top-bar,
 .top-bar ul {
     background-color: $topbar-sticky-shrink-bg;
