--- a/scss/custom/_responsive.scss
+++ b/scss/custom/_responsive.scss
@@ -16,4 +16,10 @@
     .stripe {
         padding:0;
     }
+    #header {
+        height: auto;
+    }
+    .image-header {
+        display: block;
+    }
 }
