--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -73,12 +73,12 @@ $foundation-palette: (
   secondary: #ffae00,
   success: #3adb76,
   warning: #ffae00,
-  alert: #cc4b37,
+  alert: #cc4b37
 );
 $third-color: #6d9e82;
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
+$dark-gray: #666;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
@@ -421,7 +421,7 @@ $input-prefix-color: $black;
 $input-prefix-background: $light-gray;
 $input-prefix-border: 1px solid $medium-gray;
 $input-prefix-padding: 1rem;
-$form-label-color: $secondary-color;
+$form-label-color: $dark-gray;
 $form-label-font-size: rem-calc(15);
 $form-label-font-weight: $global-weight-normal;
 $form-label-line-height: 1.8;
