--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -69,9 +69,10 @@ nav {
         margin: 0 auto;
     }
     a {
-        text-align: center;
-        line-height: 4.25em;
-        padding: .7rem 2rem
+        padding: 28px;
+    }
+    a.button {
+        margin-top: 14px;
     }
 }
 
