--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5333,9 +5333,9 @@ nav {
   .topbar-sticky-shrink .top-bar-center {
     margin: 0 auto; }
   .topbar-sticky-shrink a {
-    text-align: center;
-    line-height: 4.25em;
-    padding: .7rem 2rem; }
+    padding: 28px; }
+  .topbar-sticky-shrink a.button {
+    margin-top: 14px; }
 
 .topbar-sticky-shrink-header {
   padding: 20rem 0;
