Ajustes no slider

--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -134,3 +134,9 @@ h2 {
 .table th {
     vertical-align: top;
 }
+
+.carousel-cell {
+    width: 75%;
+    height: 400px;
+    margin-right: 10px;
+}
