--- a/web/css/app.css
+++ b/web/css/app.css
@@ -5292,6 +5292,107 @@ div.fb-like.fb_iframe_widget {
   .scrollhide-nav .title-bar {
     min-height: 4.375rem; }
 
+#nav-icon4 {
+  width: 1.5rem;
+  height: 1.5rem;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer; }
+  #nav-icon4 span {
+    display: block;
+    position: absolute;
+    height: .1875rem;
+    width: 100%;
+    background: #d3531a;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out; }
+
+#nav-icon4 span:nth-child(1) {
+  top: 0px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center; }
+
+#nav-icon4 span:nth-child(2) {
+  top: 8px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center; }
+
+#nav-icon4 span:nth-child(3) {
+  top: 16px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center; }
+
+#nav-icon4.open span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 0px;
+  left: 0px; }
+
+#nav-icon4.open span:nth-child(2) {
+  width: 0%;
+  opacity: 0; }
+
+#nav-icon4.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 18px;
+  left: 0px; }
+
+.navigation__overlay {
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  -webkit-transform-origin: top;
+  transform-origin: top;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 350ms;
+  transition-duration: 350ms;
+  -webkit-transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955); }
+
+.nav-expanded .navigation__overlay {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1); }
+
+.fixed {
+  position: fixed; }
+
+.pin {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.bg-grey-darkest {
+  background-color: #202020; }
+
 html,
 body {
   height: 100%;
@@ -5404,11 +5505,6 @@ h2 {
 .table th {
   vertical-align: top; }
 
-.carousel-cell {
-  width: 75%;
-  height: 400px;
-  margin-right: 10px; }
-
 @media screen and (max-width: 39.9375em) {
   .quote {
     top: 0;
@@ -5426,3 +5522,58 @@ h2 {
     height: auto; }
   .image-header {
     display: block; } }
+
+.loader {
+  position: relative;
+  margin: 0px auto;
+  width: 100px;
+  height: 100px; }
+
+.circular {
+  animation: rotate 2s linear forwards;
+  width: 100px;
+  height: 100px;
+  position: relative; }
+
+.path {
+  stroke: #3adb76;
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  animation: dash 1.5s ease-in-out forwards, color 6s ease-in-out infinite;
+  stroke-linecap: round; }
+
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0; }
+  100% {
+    stroke-dasharray: 150, 200;
+    stroke-dashoffset: 10; } }
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg); } }
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.5s cubic-bezier(0.65, 0, 0.45, 1) 1.5s forwards; }
+
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0; } }
+
+.suc {
+  stroke: #3adb76;
+  stroke-width: 2;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  width: 40px;
+  height: 40px; }
+
+.carousel-cell {
+  width: 75%;
+  height: 400px;
+  margin-right: 10px; }
